day4/busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec: 
      nodeName: worker01
      containers:
        - name: busybox-container
          image: busybox
          command: ['sh', '-c', 'while true; do sleep 3600; done']
