day4/noschedule-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noschedule-pod1
  labels:
    topic: taints
spec:
  tolerations:
    - key: "key1"
      operator: "Equal"
      value: "value1"
      effect: "NoSchedule"
    - key: "key1"
      operator: "Equal"
      value: "value1"
      effect: "NoExecute"
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
