day4/np-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: np-busybox
  labels:
    app: client
spec:
  containers:
    - name: busybox
      image: 'radial/busyboxplus:curl'
      command: [ 'sh', '-c', 'while true; do sleep 3600; done']
