day4/pv-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
   name: pv-pod 
spec: 
   containers: 
      - name: busybox 
        image: busybox 
        command: ['sh', '-c', 'while true; do echo Success! >> /output/success.txt; sleep 10; done'] 
        volumeMounts:
        - mountPath: /output
          name: pv-storage 
   volumes: 
   - name: pv-storage 
     persistentVolumeClaim: 
       claimName: task-pvc
