day4/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  nodeSelector:
    web-services: "true"
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
